Version 1.15.3
------------------------
Date:14-November-2022

Bug fix for tag


Version 1.15.2
------------------------
Date:14-November-2022

Add serviceType in Voucher

Need to add in menu:
INSERT INTO admin_portal.menu (menu, operation) VALUES ('add_tag_product', 'POST');
INSERT INTO admin_portal.menu (menu, operation) VALUES ('save_tag_product', 'POST');
INSERT INTO admin_portal.menu (menu, operation) VALUES ('add_tag_product', 'GET');
INSERT INTO admin_portal.menu (menu, operation) VALUES ('query_tag_product', 'POST');
INSERT INTO admin_portal.menu (menu, operation) VALUES ('deletemultiple_tag_product', 'POST');


Version 1.15.1
------------------------
Date:7-November-2022

Show order item details in repot 'Daily Details Sales'


Version 1.15.0
------------------------
Date:4-November-2022

New feature for Tag : featured product 


Version 1.14.0
------------------------
Date:31-October-2022

Implement user access control, user roles
Add service type, channel in transaction report


Version 1.13.3
------------------------
Date:20-October-2022

Add new menu : MobileApp Log


Version 1.13.2
------------------------
Date:17-October-2022

Add new menu : Tag


Version 1.13.1
------------------------
Date:12-October-2022

Change side bar to collapse-able
Add OG-Tag Page


Version 1.13.0
------------------------
Date:10-October-2022

Add Pop Up Modal for Customer Data and Incomplete Order


Version 1.12.9
------------------------
Date:06-October-2022

Fix Incomplete Order Bugs


Version 1.12.8
------------------------
Date:30-Sep-2022

Add Usersitemap Excel file & pagination
Fix Excel Error
Add Service Type column in Customer Analytic


Version 1.12.7
------------------------
Date:27-Sep-2022

Add Excel File for UserSiteMap
Add modal for product details in UserIncompleteOrder page
Update UserIncompleteOrder page excel file
Update customer activity log query


Version 1.12.6
------------------------
Date:26-Sep-2022

Fix Export Excel Error


Version 1.12.5