@@ -1,8 +1,9 @@
 Version 1.15.3
 ------------------------
-Date:14-November-2022
+Date:15-November-2022
 
 Bug fix for tag
+Filter voucher by service type
 
 
 Version 1.15.2
